Research pages added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <img src="images/img.jpg" alt="Beautiful nature" style="width:200px;height:200px;"> 
         <h1>Valentina</h1>
     <p class = "sansserif">Hi, I am the student of Bellevue College pursuing BA degree in Application Development. Along with excellent communication and management skills I will bring to your company knowledge of the modern technologies such as MVC, ADO, LINQ, Docker Container, and HTML, CSS, C#, JavaScript, ReactJS programming languages.</p>
+        <h2>My Research</h2>
+        <p><a href="html/resources.html">Android Sensor Research</a></p>
   
     
     </body>
