More Research Info about sensors added

--- a/html/resources.html
+++ b/html/resources.html
@@ -17,9 +17,10 @@
 <h1>Web Resources</h1>
 
 <p class="foo">
-<a href="#a">Android Sensor Overview</a> | 
-<a href="#b">W3C</a> | 
-<a href="#c">Site Three</a>
+<a href="#a">NCBI Resources</a> | 
+<a href="#b">Android Sensors</a> | 
+<a href="#c">CodeLabs training</a>
+<a href="#d">Building Simple App in Kotlin</a>
 <a href="../index.html">Main</a>
 </p>
 
@@ -28,8 +29,9 @@
 <li>
 <p id="a">
 <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6358936/">NCBI Resources</a><br />
-A Physiological Sensor-Based Android Application Synchronized with a Driving Simulator for Driver Monitoring.<br />
-Rating: 5 out of 5
+A Physiological Sensor-Based Android Application Synchronized with a Driving Simulator for Driver Monitoring. <br />
+  In the Abstract of this article presented the overview of an Android application that is used for controlling and monitoring the physiological sensors from the Shimmer platform and its synchronized working with a driving simulator. This useful Android Application can monitor drivers and their parameters can be used to analyze the relation between their physiological states and driving performance. The app can configure, select, receive, process, represent graphically, and store the signals from electrocardiogram (ECG), electromyogram (EMG) and galvanic skin response (GSR) modules and accelerometers, a magnetometer and a gyroscope. The Android app is synchronized in two steps with a driving simulator that we previously developed using the Unity game engine to analyze driving security and efficiency. The Android app was tested with different sensors working simultaneously at various sampling rates and in different Android devices. We also tested the synchronized working of the driving simulator and the Android app with 25 people and analyzed the relation between data from the ECG, EMG, GSR, and gyroscope sensors and from the simulator. Among others, some significant correlations between a gyroscope-based feature calculated by the Android app and vehicle data and particular traffic offences were found. The Android app can be applied with minor adaptations to other different users such as patients with chronic diseases or athletes (David Gonzalez-Ortega, 2019).   <br />
+  Rating: 5 out of 5
 
 </p>
 </li>
@@ -38,6 +40,7 @@ Rating: 5 out of 5
 <p id="b">
 <a href="https://www.tutorialspoint.com/android/android_sensors.htm">Android Sensors</a><br />
 Great Tutorial how to build Android Applications using sensors.<br />
+  This Tutorial offers simple explanation of three widely used categories of sensors such as Motion Sensors, Environmental sensors, and Position sensors. We can find greatly organized structure of description and methods of classes and steps how to build a simple application that shows the list of sensors on your device. I consider it to be a great tool for the beginner to understand the concepts of implementing of the basic application.   <br />
 Rating: 5 out of 5
 
 </p>
@@ -48,7 +51,17 @@ Rating: 5 out of 5
 <p id="c">
 <a href="https://codelabs.developers.google.com/codelabs/advanced-android-training-sensor-data/index.html?index=..%2F..advanced-android-training#0">CodeLabs training</a><br />
 Great lab exercises to learn Android sensor framework.<br />
+    Offered Training Lab “Getting sensor data” is designed for advanced developers who are already familiar with making, implementing, and running apps in Android Studio. In this advanced Android Development Training Lab, we can find great practice tool how to create application that lists the available sensors. Also, we can run our app on a device and on the emulator to view sensors. And then create a second app that gets data from the light and proximity sensors and displays that data. Later we interact with the device and note the changes in sensor data. Finally, we run the app in the emulator and learn about the emulator's virtual sensors.<br />
 Rating: 4 out of 5
+</p>
+</li>
+    
+<li>
+<p id="d">
+<a href="https://expertise.jetruby.com/how-to-implement-motion-sensor-in-a-kotlin-app-b70db1b5b8e5">How to Implement Motion Sensor in a Kotlin App</a><br />
+Great overview of implementing motion sensor in mobile application in Kotlin <br />
+    Since implementing sensors switched from Java to Kotlin this article covers the way of building a simple application in Kotlin. This article gives detailed overview on necessity of sensors for mobile application development. The language of this article is simple. It might be great resource for the beginners in this field. It explains a subset of hardware sensors, such as motion sensors. Also, it provides detailed information about types of sensors covering motion, environmental and position sensors in details. The author of this article separates sensors based on their parameters such as hardware and software. After review of existing sensors, it’s determining which sensors are going to be used in the app. Next step is checking sensor’s availability performing two tasks: Identifying sensors and sensor capabilities and Monitor sensor events. Finally, implementing of SensorEventListener took place that allowed collecting data from any sensor. <br />
+Rating: 5 out of 5
 </p>
 </li>
 
